--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^4.2.1",
+    "openai": "^6.10.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.1",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
