--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AI Chat Reader",
+  "name": "Renard",
   "version": "1.0",
   "description": "Reads chat messages from ChatGPT, Gemini, Claude, Grok.",
   "icons": {
