--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2",
     "node-cron": "^4.2.1",
     "openai": "^6.10.0",
     "passport": "^0.7.0",
