--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "@prisma/adapter-pg": "^6.19.0",
     "@prisma/client": "^6.19.0",
     "@qdrant/js-client-rest": "^1.16.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dodopayments": "^2.13.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
